--- a/css/main.css
+++ b/css/main.css
@@ -36,30 +36,31 @@ html {
     position: absolute;
     width: 100px;
     height: 100px;
-    bottom: 100px;
+    bottom: 5px;
 }
 
 #personal-site {
     position: absolute;
     width: 90px;
     height: 90px;
-    bottom: 105px;
+    bottom: 15px;
     left: 100px;
 }
 
 #github {
     position: absolute;
-    width: 175px;
-    height: 50px;
-    bottom: 10px;
-    padding: 10px;
+    width: 90px;
+    height: 90px;
+    bottom: 5px;
+    left: 275px;
+    padding: 5px;
 }
 
 #angel-list {
     position: absolute;
     width: 60px;
     height: 80px;
-    bottom: 105px;
+    bottom: 15px;
     left: 190px;
     padding: 5px 10px 5px 10px;
 }
